d2c-org/ilh-sales/base-objects/main/default/objects/User/fields/AgentID__c.field-meta.xml
<CustomField>
    <fullName>AgentID__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <label>Agent ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>