d2c-org/ilh-sales/base-objects/main/default/objects/User/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <businessOwnerGroup>ITDataOwner</businessOwnerGroup>
    <label>Employee ID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>