d2c-org/ilh-sales/base-objects/main/default/objects/User/fields/PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerCode__c</fullName>
    <label>Partner Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PartnerCode</valueSetName>
    </valueSet>
</CustomField>